[Bugfix] Fixing small align issue on mobile (#27)
* Fixing small align issues on mobile

* A bit of tidy up

--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -22,6 +22,10 @@
         }
       }
 
+      .campus-intro {
+        margin-bottom: 1.25rem;
+      }
+
       button {
         margin-bottom: 1.625rem;
       }
